# BuzzDB-Tables

./: .gitignore  CMakeLists.txt  buzzdb  buzzdb-original  buzzdb-original.cpp  buzzdb.cpp  output.txt
buzzdb/: CMakeLists.txt
buzzdb/include/: BuzzDB.h
buzzdb/include/core/: Field.h  Tuple.h
buzzdb/include/index/: HashIndex.h
buzzdb/include/operators/: HashAggregationOperator.h  Operator.h  ScanOperator.h  SelectOperator.h
buzzdb/include/predicates/: ComplexPredicate.h  IPredicate.h  SimplePredicate.h
buzzdb/include/query/: QueryComponents.h  QueryParser.h
buzzdb/include/storage/: BufferManager.h  SlottedPage.h  StorageManager.h
buzzdb/src/core/: Field.cpp  Tuple.cpp
buzzdb/src/storage/: SlottedPage.cpp
